--- a/src/index.css
+++ b/src/index.css
@@ -2,3 +2,24 @@
 @tailwind components;
 @tailwind utilities;
 /* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap'); */
+
+/* Scrollbar styling for WebKit browsers (Chrome, Safari) */
+::-webkit-scrollbar {
+    width: 5px; /* Width of the scrollbar */
+    height: 5px; /* Height of the scrollbar (for horizontal scrollbar) */
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background-color: #DD9BA3; /* Color of the scrollbar thumb */
+    border-radius: 4px; /* Rounded corners for the scrollbar thumb */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Color of the track */
+    border-radius: 4px; /* Rounded corners for the track */
+  }
+  
+  /* Firefox scrollbar styling */
+  scrollbar-width: thin; /* Makes the scrollbar thin */
+  scrollbar-color: #DD9BA3 #f1f1f1; /* Color of the scrollbar thumb and track */
+  
